# protocol-m

./: .gitignore  CHANGELOG.md  COMPLETE_SUMMARY.md  Cargo.toml  EXPLAINER_SERIES.md  FINAL_STATUS.md  LAUNCH_SUMMARY.md  MOLTBOOK_SETUP.md  ORACLE_DOLLAR_TRANSITION.md  ORACLE_POST_AGI_RESPONSE.md  QUICK_START.md  RALPH_PREP.md  README.md  READY_FOR_RALPH.md  oracle-enhanced-economics.md  other_ai.md  prd-closer.md  prd.json  prd.json.backup  progress.txt  project.md
crates/openclaw-cli/: Cargo.toml
crates/openclaw-cli/src/: keystore.rs  main.rs  metadata.rs  policy.rs
crates/openclaw-server/: Cargo.toml
crates/openclaw-server/migrations/: 20260131000001_create_artifacts_table.sql  20260131000002_create_artifact_derivations_table.sql  20260131000003_create_did_bindings_table.sql  20260131000004_create_did_challenges_table.sql  20260131000005_add_challenge_failed_attempts.sql  20260131000006_add_posts_signature_fields.sql  20260131000007_create_m_credits_accounts_table.sql  20260131000008_create_m_credits_ledger_table.sql  20260131000009_create_purchase_invoices_table.sql  20260131000010_add_promo_mint_event_type.sql  20260131000011_create_bounties_table.sql  20260131000012_create_escrow_holds_table.sql  20260131000013_create_bounty_submissions_table.sql  20260131000014_add_submission_artifact_id.sql  20260131000015_create_compute_providers_table.sql  20260131000016_create_redemption_receipts_table.sql  20260131000017_create_m_reputation_table.sql  20260131000018_create_reputation_events_table.sql  20260131000019_create_disputes_table.sql  20260131000020_create_approval_requests_table.sql  20260131000021_create_user_policies_table.sql  20260131000022_add_pending_approval_bounty_status.sql  20260131000023_create_agent_suspensions_table.sql
crates/openclaw-server/src/: db.rs  error.rs  lib.rs  models.rs
crates/openclaw-server/src/models/: agent_suspension.rs  approval_request.rs  artifact.rs  artifact_derivation.rs  bounty.rs  bounty_submission.rs  compute_provider.rs  did_binding.rs  did_challenge.rs  post.rs  (+9 more)
crates/openclaw-server/tests/: did_binding_integration.rs
(+52 files in other folders)
