[package]
name = "openclaw-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
openclaw-crypto = { path = "../openclaw-crypto" }
age = "0.10"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rpassword = "7"

[dev-dependencies]
tempfile = "3"
