[package]
name = "openclaw-server"
version = "0.1.0"
edition = "2021"
description = "OpenClaw API server for Protocol M"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography (for signature verification)
ed25519-dalek = "2"
base64 = "0.22"
sha2 = "0.10"
bs58 = "0.5"
serde_jcs = "0.1"

# Random number generation
rand = "0.8"

# Hex encoding
hex = "0.4"

# Local crates
openclaw-crypto = { path = "../openclaw-crypto" }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
hex = "0.4"
